# cpp-network-guessing-game-Gregory-Liu-Chin-Ying

./: CMakeLists.txt  LICENSE  README.md
include/: Client.h  ConsoleColor.h  Dice.h  GameManager.h  NetworkManager.h  Player.h  Server.h
main/: client_main.cpp  server_main.cpp
src/: Client.cpp  Dice.cpp  GameManager.cpp  NetworkManager.cpp  Player.cpp  Server.cpp
